--- a/src/app/events/cricketmatchs/team-form/team-form.component.html
+++ b/src/app/events/cricketmatchs/team-form/team-form.component.html
@@ -1,4 +1,3 @@
-
 <app-nav-bar></app-nav-bar>
 
 <div id="back">
@@ -6,14 +5,13 @@
     <div *ngIf="!IsLogin" class="wrapper fadeInDown col-md-12 container">
       <div id="formContent">
         <!-- Tabs Titles -->
-    
-        <!-- Icon -->
+        <br>
         <div class="fadeIn first">
           <h1>Cricket Team Form</h1>
         </div>
         <h5 class="card-title"> <h3 id="msg">{{Message}}</h3></h5>
         <!-- Sign up Form -->
-        <form [formGroup]="teamForm"  autocomplete="off" novalidate (ngSubmit)="teamData(teamForm.value)">
+        <form [formGroup]="teamForm" autocomplete="off" novalidate (ngSubmit)="teamData(teamForm.value)">
         
             <div class="form-group row">
                 <div class="col-10">
@@ -28,7 +26,7 @@
                     <label for="inputTeamCaptainName">Captain Name : </label>   
                   <div class="row">
                     <div class="col-9 col-sm-9">   
-                        <span class="sp1"><div >{{name}}</div></span>
+                        <span class="sp1"><div>{{name}}</div></span>
                     </div>
                     <div class="col-3 col-sm-3">
                         <button type="button" class="btn btn-link btn-sm" (click)="open(content2)">Select Captain</button>
@@ -81,7 +79,7 @@
             <div class="row">
                 <div class="col-5"></div>
                 <div class="col-2">
-                    <button type="submit" id="btn-sub" class="btn btn-outline-danger" [disabled]="!teamForm.valid">Submit</button>
+                    <button type="submit" id="btn-sub" (click)="myFunc()" class="btn btn-outline-danger" [disabled]="!teamForm.valid">Submit</button>
                 </div> 
                 <div class="col-5"></div>
             </div>
@@ -110,7 +108,7 @@
         <div class="modal-body">
         <table class="table table-borderless">
             <tr *ngFor="let i of result;" class="form-check">      
-                <td><input type="checkbox" class="form-check-input" (change)="onChange(i.id,i.empName, $event.target.checked)"name="{{ i.empName }}" id="{{i.empName}}">{{i.empName}}</td>
+                <td><input type="checkbox" class="radio" class="form-check-input" (change)="onChange(i.id,i.empName, $event.target.checked)"name="{{ i.empName }}" id="{{i.empName}}">{{i.empName}}</td>
             </tr>
         </table>                              
         </div>
@@ -138,7 +136,7 @@
             <div class="modal-body">
             <table class="table table-borderless">
                 <tr *ngFor="let i of result;" class="form-check">      
-                    <td><input type="checkbox" class="form-check-input" (change)="onChange2(i.empId,i.empName, $event.target.checked)"name="{{ i.empName }}" id="{{i.empName}}">{{i.empName}}</td>
+                    <td><input type="radio" class="form-check-input" (change)="onChange2(i.id,i.empName, $event.target.checked)"name="{{ i.empName }}" id="{{i.empName}}">{{i.empName}}</td>
                 </tr>
             </table>                              
             </div>
@@ -148,4 +146,4 @@
               <small class="text-muted"></small>
             <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Close</button>
             </div>
-        </ng-template>
+    </ng-template>
