--- a/src/app/events/select-attribute-registration/select-attribute-registration.component.html
+++ b/src/app/events/select-attribute-registration/select-attribute-registration.component.html
@@ -1,3 +1,83 @@
-<p>
-  select-attribute-registration works!
-</p>
+<div >
+        
+  
+  <div id="formContent" >
+    <!-- Tabs Titles -->
+
+    <!-- Icon -->
+    <div >
+      <h1>Select Fields</h1>
+    </div>
+    <h5 class="card-title"> <h3 id="msg">{{Message}}</h3></h5>
+    <!-- Sign up Form -->
+    <form [formGroup]="EventForm" autocomplete="off" novalidate (ngSubmit)="createrole(EventForm.value)">
+        
+        
+<!--
+        <div class="form-group col-md-6">
+          
+         
+          <input type="checkbox" class="form-control" formControlName="StartDate" name="StartDate" id="StartDate" >
+        
+      </div>
+      
+       -->
+       
+      <table class="table table-borderless">
+          <tr class="form-check">
+          <td><input type="checkbox" class="form-check-input" formControlName="nic" id="nic">nic</td>
+          </tr>
+         
+          <tr class="form-check">
+              <td><input type="checkbox" class="form-check-input" formControlName="transportationMode" id="transportationMode">transportationMode</td>
+              </tr>
+
+          <tr class="form-check">
+          <td><input type="checkbox" class="form-check-input" formControlName="accomadation" id="accomadation">accomadation</td>
+          </tr>
+
+          <tr class="form-check">
+              <td><input type="checkbox" class="form-check-input" formControlName="mealType" id="mealType">mealType</td>
+              </tr>
+              <tr class="form-check">
+                <td><input type="checkbox" class="form-check-input" formControlName="dob" id="dob">dob</td>
+                </tr>
+
+          <tr class="form-check ">
+              <td><input type="checkbox" class="form-check-input " formControlName="gender" id="gender">gender</td>
+              </tr>
+      
+              <tr class="form-check">
+                  <td><input type="checkbox" class="form-check-input" formControlName="spouseName" id="spouseName">spouseName</td>
+                  </tr>
+
+                  <tr class="form-check">
+                      <td><input type="checkbox" class="form-check-input" formControlName="spouseNic" id="spouseNic">spouseNic</td>
+                      </tr>
+                      <tr class="form-check">
+                        <td><input type="checkbox" class="form-check-input" formControlName="spouseDob" id="spouseDob">spouseDob</td>
+                        </tr>
+  
+
+      </table>  
+
+      
+        <div class="btn-group" role="group" aria-label="Basic example">
+        <!-- <button type="button" class="btn btn-danger" (click)="redirectToOwnerList()">Cancel</button> -->
+        <button type="submit" class="btn btn-success" [disabled]="!EventForm.valid">Add Attributes</button>
+        
+    </div> 
+    </form>
+        <!-- <div class="copy-text">For Create new account? <i class="fa fa-heart"></i><a id="crateAccountlink"  (click)="crateAccount()"> Create</a></div> -->
+        
+    <!-- Remind Passowrd -->
+    <div id="formFooter">
+      <a  id="crateAccountlink"  class="underlineHover" ></a>
+     
+    </div>
+
+  </div>
+
+
+
+</div>
