--- a/src/app/events/select-attribute-registration/select-attribute-registration.component.html
+++ b/src/app/events/select-attribute-registration/select-attribute-registration.component.html
@@ -25,37 +25,37 @@
        
       <table class="table table-borderless">
           <tr class="form-check">
-          <td><input type="checkbox" class="form-check-input" formControlName="nic" id="nic">nic</td>
+          <td><input type="checkbox" class="form-check-input" formControlName="nic" id="nic">NIC</td>
           </tr>
          
           <tr class="form-check">
-              <td><input type="checkbox" class="form-check-input" formControlName="transportationMode" id="transportationMode">transportationMode</td>
+              <td><input type="checkbox" class="form-check-input" formControlName="transportationMode" id="transportationMode">Transport Type</td>
               </tr>
 
           <tr class="form-check">
-          <td><input type="checkbox" class="form-check-input" formControlName="accomadation" id="accomadation">accomadation</td>
+          <td><input type="checkbox" class="form-check-input" formControlName="accomadation" id="accomadation">Accomadation Type</td>
           </tr>
 
           <tr class="form-check">
-              <td><input type="checkbox" class="form-check-input" formControlName="mealType" id="mealType">mealType</td>
+              <td><input type="checkbox" class="form-check-input" formControlName="mealType" id="mealType">Meal Type</td>
               </tr>
               <tr class="form-check">
-                <td><input type="checkbox" class="form-check-input" formControlName="dob" id="dob">dob</td>
+                <td><input type="checkbox" class="form-check-input" formControlName="dob" id="dob">Date of Birth</td>
                 </tr>
 
           <tr class="form-check ">
-              <td><input type="checkbox" class="form-check-input " formControlName="gender" id="gender">gender</td>
+              <td><input type="checkbox" class="form-check-input " formControlName="gender" id="gender">Gender</td>
               </tr>
       
               <tr class="form-check">
-                  <td><input type="checkbox" class="form-check-input" formControlName="spouseName" id="spouseName">spouseName</td>
+                  <td><input type="checkbox" class="form-check-input" formControlName="spouseName" id="spouseName">Spouse Name</td>
                   </tr>
 
                   <tr class="form-check">
-                      <td><input type="checkbox" class="form-check-input" formControlName="spouseNic" id="spouseNic">spouseNic</td>
+                      <td><input type="checkbox" class="form-check-input" formControlName="spouseNic" id="spouseNic">Spouse NIC</td>
                       </tr>
                       <tr class="form-check">
-                        <td><input type="checkbox" class="form-check-input" formControlName="spouseDob" id="spouseDob">spouseDob</td>
+                        <td><input type="checkbox" class="form-check-input" formControlName="spouseDob" id="spouseDob">Spouse Date of Birth</td>
                         </tr>
   
 
