--- a/src/app/events/add-event/add-event.component.html
+++ b/src/app/events/add-event/add-event.component.html
@@ -88,8 +88,32 @@
            </div> 
            
            <div class="form-group col-md-12"*ngIf="numberOfTeams">
-            <input class="form-control" formControlName="NumberOfTeams" id="NumberOfTeams" placeholder="Number of teams">
+            <input class="form-control" formControlName="NumberOfTeams" id="NumberOfTeams" required>
             <label >Number of teams</label>
+
+       </div> 
+
+       <div class="form-group col-md-12"*ngIf="budgetedCost">
+            <input type="number" class="form-control" formControlName="budgetedCost" id="budgetedCost" required>
+            <label >Budgeted Cost</label>
+
+       </div> 
+
+       <div class="form-group col-md-12"*ngIf="actualCost">
+            <input type="number" class="form-control" formControlName="actualCost" id="actualCost" required>
+            <label >Actual Cost</label>
+
+       </div> 
+      
+       <div class="form-group col-md-12"*ngIf="mainOrganiZer">
+            <input  type="number" class="form-control" formControlName="mainOrganiZer" id="mainOrganiZer" required>
+            <label >Main Organizer</label>
+
+       </div> 
+
+       <div class="form-group col-md-12"*ngIf="summary">
+            <input class="form-control" formControlName="summary" id="summary" required>
+            <label >Summary of Event</label>
 
        </div> 
                
