--- a/src/app/events/select-attribute/select-attribute.component.html
+++ b/src/app/events/select-attribute/select-attribute.component.html
@@ -23,11 +23,11 @@
          -->
         <table class="table table-borderless">
             <tr class="form-check">
-            <td><input type="checkbox" class="form-check-input" formControlName="EndDate" id="EndDate">EndDate</td>
+            <td><input type="checkbox" class="form-check-input" formControlName="EndDate" id="EndDate">End Date of Event</td>
             </tr>
            
             <tr class="form-check">
-                <td><input type="checkbox" class="form-check-input" formControlName="ClosingDate" id="ClosingDate">ClosingDate</td>
+                <td><input type="checkbox" class="form-check-input" formControlName="ClosingDate" id="ClosingDate">Closing Date for Registration</td>
                 </tr>
 
             <tr class="form-check">
@@ -35,11 +35,11 @@
             </tr>
 
             <tr class="form-check">
-                <td><input type="checkbox" class="form-check-input" formControlName="Liquor" id="Liquor">Liquor</td>
+                <td><input type="checkbox" class="form-check-input" formControlName="Liquor" id="Liquor">Whether Liquor is Allowed</td>
                 </tr>
 
             <tr class="form-check ">
-                <td><input type="checkbox" class="form-check-input " formControlName="IsFamilyMembersAllowed" id="IsFamilyMembersAllowed">IsFamilyMembersAllowed</td>
+                <td><input type="checkbox" class="form-check-input " formControlName="IsFamilyMembersAllowed" id="IsFamilyMembersAllowed">Whether Family Members Allowed</td>
                 </tr>
         
                 <tr class="form-check">
@@ -47,10 +47,26 @@
                     </tr>
 
                     <tr class="form-check">
-                        <td><input type="checkbox" class="form-check-input" formControlName="NumberOfTeams" id="NumberOfTeams">numberOfTeams</td>
+                        <td><input type="checkbox" class="form-check-input" formControlName="NumberOfTeams" id="NumberOfTeams">Number of Teams</td>
                         </tr>
-    
 
+                        <tr class="form-check">
+                                <td><input type="checkbox" class="form-check-input" formControlName="budgetedCost" id="budgetedCost">Budgeted Cost of Event</td>
+                                </tr>
+                
+                            <tr class="form-check ">
+                                <td><input type="checkbox" class="form-check-input " formControlName="actualCost" id="actualCost">Actual Cost of Event</td>
+                                </tr>
+                        
+                                <tr class="form-check">
+                                    <td><input type="checkbox" class="form-check-input" formControlName="mainOrganiZer" id="mainOrganiZer">Main OrganiZer of Event</td>
+                                    </tr>
+                
+                                    <tr class="form-check">
+                                        <td><input type="checkbox" class="form-check-input" formControlName="summary" id="summary">Summary of Event</td>
+                                        </tr>
+    
+                                       
         </table>  
 
         
