--- a/src/app/events/update-event/update-event.component.html
+++ b/src/app/events/update-event/update-event.component.html
@@ -6,9 +6,9 @@
         
             <!-- Icon -->
             <div >
-              <h1>Update Project</h1>
+              <h1>Edit Event</h1>
             </div>
-            <h5 class="card-title"> <h3 id="msg">{{Message}}</h3></h5>
+            <h5 class="card-title"></h5>
             <!-- Sign up Form -->
             <form [formGroup]="projectForm" autocomplete="off" novalidate (ngSubmit)="updateproject(projectForm.value)">
                     <div class="form-group col-md-12">
@@ -83,10 +83,34 @@
                                             <label >Destination</label>
 
                                         </div> 
+
+                                        <div class="form-group col-md-12"*ngIf="budgetedCost">
+                                                <input class="form-control" formControlName="budgetedCost" id="budgetedCost" required>
+                                                <label >Budgeted Cost</label>
+                                    
+                                           </div> 
+                                    
+                                           <div class="form-group col-md-12"*ngIf="actualCost">
+                                                <input class="form-control" formControlName="actualCost" id="actualCost" required>
+                                                <label >Actual Cost</label>
+                                    
+                                           </div> 
+                                          
+                                           <div class="form-group col-md-12"*ngIf="mainOrganiZer">
+                                                <input class="form-control" formControlName="mainOrganiZer" id="mainOrganiZer" required>
+                                                <label >Main Organizer</label>
+                                    
+                                           </div> 
+                                    
+                                           <div class="form-group col-md-12"*ngIf="summary">
+                                                <input class="form-control" formControlName="summary" id="summary" required>
+                                                <label >Summary of Event</label>
+                                    
+                                           </div> 
                 
                 <div class="btn-group" role="group" aria-label="Basic example">
                 <!-- <button type="button" class="btn btn-danger" (click)="redirectToOwnerList()">Cancel</button> -->
-                <button type="submit" class="btn btn-success" [disabled]="!projectForm.valid">Create</button>
+                <button type="submit" class="btn btn-success" [disabled]="!projectForm.valid" (click)="updateAttribute(projectForm.value)">Save Changes</button>
                 <div class="col-sm-1"></div>
                 <button type="button" class="btn btn-success" [disabled]="!projectForm.valid"  (click)="updateAttribute(projectForm.value)">Add more field</button>
                 
@@ -106,4 +130,6 @@
   
         </div>
     
-    
+            
+            
+  
