--- a/src/app/profile/login-employee/login-employee.component.html
+++ b/src/app/profile/login-employee/login-employee.component.html
@@ -7,7 +7,7 @@
 
     <!-- Icon -->
     <div class="fadeIn first">
-      <img [src]="profileImage" id="icon" alt="User Icon" />
+      <img [src]="profileImage" id="zoom3" height="200em" width="200em" alt="User Icon" class="rounded-circle margin-left ml-2" alt="User Icon" />
    
       <h1 *ngIf="!EmployeeName">Sign in</h1>
       
