--- a/src/app/profile/signup-employee/signup-employee.component.html
+++ b/src/app/profile/signup-employee/signup-employee.component.html
@@ -10,7 +10,7 @@
         <!-- Icon -->
         <div class="fadeIn first">
       
-          <img   [src]="ImageUrl" id="icon" alt="User Icon" > 
+          <img   [src]="ImageUrl"  id="zoom3" height="200em" width="200em" alt="User Icon" class="rounded-circle margin-left ml-2" > 
           <h1>Sign up</h1>
         </div>
     
