--- a/src/app/profile/Employee/change-position/change-position.component.html
+++ b/src/app/profile/Employee/change-position/change-position.component.html
@@ -47,7 +47,7 @@
             </tr></thead>
             <tbody>
             <tr  *ngFor="let i of result | filterPipe: filtertext | filterPipePipe2: filterposition | filterPipePipe3: filterproject  " >
-              <td id="zoom3" > <img [src]= "ImageUrl+i.empProfilePicture" id="profilePicture" width="100px" ></td>
+              <td id="zoom3" > <img [src]= "ImageUrl+i.empProfilePicture" id="profilePicture" id="zoom2" height="100em" width="100em" alt="User Icon" class="rounded-circle margin-left ml-2"></td>
               <td>{{i.empName}}</td>
               <td>{{i.empEmail}}</td>
               <td>
