--- a/src/app/profile/Employee/employee-details/employee-details.component.css
+++ b/src/app/profile/Employee/employee-details/employee-details.component.css
@@ -1,9 +1,7 @@
 img {width: 100px;}
 section #formA{
-    background: rgb(212, 212, 211);  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom, rgb(136, 135, 134),rgb(212, 212, 211));  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, rgb(136, 135, 134),rgb(212, 212, 211)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-   
+    background: rgb(255, 255, 251);  /* fallback for old browsers */
+    
 }
 section h2{
     color: white;
@@ -13,15 +11,15 @@ section h2{
 }
 
 section h3{
-    color: rgba(185, 7, 7);
+    color: rgb(176, 14, 35);
     font-size: 40px;
     text-align: center;
     font-weight: bold;
     padding-bottom: 20px;
 }
 #sideA{
-    background-color: rgba(185, 7, 7, 0.8);
+    background-color: rgb(176, 14, 35);
 }
 em{
-    color: red;
+    color: rgb(176, 14, 35);
 }
