--- a/src/app/profile/Employee/employee-details/employee-details.component.html
+++ b/src/app/profile/Employee/employee-details/employee-details.component.html
@@ -1,7 +1,7 @@
 <app-nav-bar></app-nav-bar>
 
-<!-- <section class="testimonial py-5 container" id="testimonial">
-    <div class="container">
+ <section class="testimonial py-5 container " id="testimonial">
+    <div class="container card">
         <div class="row ">
             <div class="col-md-4 py-5 text-white text-center " id="sideA">
                 <div class="sideA">
@@ -37,7 +37,7 @@
                     <div class="form-group col-md-9"><h4>{{result.empDepartment}}</h4></div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-md-3"><h4>Posiion:</h4></div>
+                    <div class="form-group col-md-3"><h4>Position:</h4></div>
                     <div class="form-group col-md-9"><h4>{{result.empPosition}}</h4></div>
                 </div>
                 <div class="form-row">
@@ -49,13 +49,13 @@
                   <div class="form-group col-md-9"><h4>{{result.empStartDate| date}}</h4></div>
               </div>
                 <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-                    <mat-button-toggle class="btn btn-secondary"  value="bold" (click)="goPrevious()">Previous</mat-button-toggle>
-                    <mat-button-toggle class="btn btn-secondary"  value="italic" (click)="goNext()">Next</mat-button-toggle>
-                    <mat-button-toggle class="btn btn-secondary"  value="underline" (click)="goBack()">Back</mat-button-toggle>
+                    <!-- <mat-button-toggle class="btn btn-secondary"  value="bold" (click)="goPrevious()">Previous</mat-button-toggle> -->
+                    <!-- <mat-button-toggle class="btn btn-secondary"  value="italic" (click)="goNext()">Next</mat-button-toggle> -->
+                    <!-- <mat-button-toggle class="btn btn-secondary"  value="underline" (click)="goBack()">Back</mat-button-toggle> -->
                   </mat-button-toggle-group>
 
             </div>
         </div>
     </div>
   </section>
-   -->
+   
