update-by-sanjeewa

--- a/src/app/profile/Employee/employee-profile/employee-profile.component.html
+++ b/src/app/profile/Employee/employee-profile/employee-profile.component.html
@@ -125,7 +125,7 @@
                         </div>
                   
                         
-                        <!-- <app-add-info></app-add-info> -->
+                        <app-add-info></app-add-info>
 
 
 
