--- a/src/app/shared-module/nav-bar/nav-bar.component.html
+++ b/src/app/shared-module/nav-bar/nav-bar.component.html
@@ -21,7 +21,7 @@
       <a *ngIf="islogged" class="nav-link" routerLink="/events/addevent" routerLinkActive="active">UpComming Events</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/profile/list" routerLinkActive="active ">Members</a>
+      <a class="nav-link" routerLink="/profile/lists" routerLinkActive="active ">Members</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="/profile/update" routerLinkActive="active ">Update Members</a>
