--- a/src/app/task/addtask/addtask.component.html
+++ b/src/app/task/addtask/addtask.component.html
@@ -19,12 +19,12 @@
                 </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                         <p><b> Responsible Member</b>
-                         <button class="btn btn-link btn-sm" (click)="open(content)"> Employee List</button>
-                        </p> 
+                         <b> Responsible Member</b>
+                         <button type="button"  class="btn btn-link btn-sm" (click)="open(content)"> Employee List</button>
+   
                           
                               <div *ngFor="let j of emailFormArray;">
-                                  {{j}}<br>
+                                  - {{j}}<br>
                               </div>
                           
                         
@@ -74,39 +74,29 @@
   
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                        <p>Start Date</p>                            
+                        <b>Start Date</b>                            
                         <input  placeholder="Start Date" class="form-control" type="date" formControlName="StartDate" id="StartDate" (blur)="compareTwoDates2()">
                             <em *ngIf="validateControl('StartDate') && hasError('StartDate', 'required')">*Start date is required</em>
-                            <div *ngIf="error2.isError" >
+                            <div *ngIf="error2.isError" style="font-style: italic" >
                                 {{ error2.errorMessage }}
                                 
                              </div>
                         </div>
                         <div class="form-group col-md-6">
-                                <!-- <label for="enddatte">End Date</label> -->
-                                <p>End Date</p>                            
+                                <b>End Date</b>                            
 
                               <input  class="form-control" type="date" formControlName="EndDate" id="edate" (blur)="compareTwoDates()">
-                              <div *ngIf="error1.isError" >
+                              <div *ngIf="error1.isError" style="font-style: italic" >
                                 {{ error1.errorMessage }}
                              </div>                             
-                              <!-- <em *ngIf="DateControl('StartDate','EndDate')">*Not valid Date</em> -->
 
                           </div>
-                          <!--div class="form-group col-md-6">
-                                <input  placeholder="Admin" class="form-control" type="text" formControlName="Admin" id="Admin">
-
-                                <em *ngIf="validateControl('Admin') && hasError('Admin', 'required')">*Admin is required</em>
-                       
-                          </div-->
+                         
                             <div class="form-group col-md-12">
                                     <input  placeholder="Description" class="form-control" type="textarea" formControlName="Description" id="description">
                            
                                 </div>
-                                <div>
-                                        <input type="checkbox" class="form-check-input" (change)="x()" class="form-control" formControlName="Status" >Is Complete
-
-                                </div>
+                               
                     </div>
                     
                 
@@ -114,7 +104,7 @@
                     <div class="form-row">
                         <div class="form-group">
                                   <div class="btn-group" role="group" aria-label="Basic example">
-                                      <button type="button" class="btn btn-danger" (click)="redirectToTaskList()">Cancel</button>
+                                      <button type="reset" class="btn btn-danger" value="Reset" (click)="redirect()">Reset</button>
                                       <button type="submit" class="btn btn-success"  [disabled]="!taskForm.valid">Add Task</button>
 
                                     </div>
