--- a/src/app/task/contacts/contacts.component.html
+++ b/src/app/task/contacts/contacts.component.html
@@ -13,7 +13,7 @@
         
             <h6 class="d-block text-black-dark ">{{i.contactType}}</h6>
             <button type="button" class="btn-link btn-sm" (click)="viewAll(i.contactId)">view All</button><br>
-            <button type="button" class="btn-link btn-sm" (click)="open2(content2,i.contactId)">Add New</button>
+            <button type="button" class="btn-link btn-sm" (click)="open2(content2,i.contactId)"><img src="https://img.icons8.com/color/48/000000/add.png"></button>
             <button type="button" class=" btn-link btn-sm" (click)="open2(content3,i.contactId)">Update</button>
             <button type="button" class="btn-link btn-sm" (click)="deleteContactType(i.contactId)">Delete</button>
 
@@ -58,8 +58,9 @@
 <!-- form to add contact types -->
 
 
-        <div class="p-2 m-2" style="width: 10rem; height :10rem; background-color:#fff;">
-            <button type="button"  (click)="open(content)">+</button>
+        <div class="p-2 m-2" style="width: 10rem; height :10rem;background-color:rgba(92, 87, 87, 0.548) ">
+            <button type="button"  (click)="open(content)">
+                <img src="https://img.icons8.com/ios-glyphs/30/000000/plus-math.png">                    </button>
             <div class="modal fade">
                     <ng-template #content let-c="close" let-d="dismiss" >
                      <div class="modal-header">
@@ -88,36 +89,6 @@
 
 
 
-        <!-- update cotact type -->
     
            
-        <div class="p-2 m-2" style="width: 10rem; height :10rem; background-color:#fff;">
-                
-                <div class="modal fade">
-                        <ng-template #content3 let-c="close" let-d="dismiss" >
-                         <div class="modal-header">
-                           <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
-                             <span aria-hidden="true">&times;</span>
-                           </button>
-                         </div>
-                         <div class="modal-body">
-    
-                            <!-- body -->
-                            <form [formGroup]="ContactFormUpdate" (ngSubmit)="updateContactType(ContactFormUpdate.value)">
-    
-    
-                                    <input  class="form-control" placeholder="Contact Type" formControlName="type">
-                                    <button type="submit" class="btn btn-success" >Update</button>
-    
-                                
-                            
-                            </form>
-                         </div>
-                         
-                        </ng-template>
-                </div>
-            </div>
-    
-</div>
-
-
+      
